// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/pages/jurisdictionView/jurisdictionTable selects and deselect nodes: should be now checked 1`] = `
<input
  checked={true}
  disabled={false}
  key="2942-check-jurisdiction"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable selects and deselect nodes: should be now deselected 1`] = `
<input
  checked={false}
  disabled={false}
  key="2942-check-jurisdiction"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable selects and deselect nodes: should be unchecked 1`] = `
<input
  checked={false}
  disabled={false}
  key="2942-check-jurisdiction"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable shows errorMessage: should have jurisdiction hierarchy error message 1`] = `"An error ocurred. Please try and refresh the page.The specific error is: Failed to load Jurisdiction hierarchy"`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: after first click 1`] = `"NameStructures CountSelected Jurisdictions"`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: after first click 2`] = `"Mtendere11"`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: after second click 1`] = `"NameStructures CountSelected Jurisdictions"`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: after second click 2`] = `"Akros_11591"`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: input checked 1`] = `"NameStructures CountSelected Jurisdictions"`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: input checked 2`] = `"Lusaka1"`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: should have single node(parent node) 1`] = `"NameStructures CountSelected Jurisdictions"`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: should have single node(parent node) 2`] = `"Lusaka"`;

exports[`src/containers/pages/jurisdictionView/jurisdictionTable works correctly through a full render cycle: should not have btn-link or onClick handler 1`] = `
<span
  key="3951-span"
>
  Akros_1
</span>
`;
